--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.15.1",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.1",
