--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@tsparticles/react": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotted-map": "^2.2.3",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.7",
     "howler": "^2.2.4",
     "lucide-react": "^0.474.0",
-    "motion": "^12.4.7",
+    "motion": "^12.0.0-alpha.2",
     "next": "15.1.6",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
