--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^4.0.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-checkbox": "^1.1.4",
@@ -24,6 +27,7 @@
     "clsx": "^2.1.1",
     "dotted-map": "^2.2.3",
     "embla-carousel-react": "^8.5.2",
+    "font-awesome": "^4.7.0",
     "framer-motion": "^12.4.7",
     "howler": "^2.2.4",
     "lucide-react": "^0.474.0",
@@ -47,6 +51,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-fontawesome": "^1.6.8",
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
