--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "dotted-map": "^2.2.3",
     "embla-carousel-react": "^8.5.2",
     "font-awesome": "^4.7.0",
+    "form-data": "^4.0.2",
     "framer-motion": "^12.4.7",
     "howler": "^2.2.4",
     "lucide-react": "^0.474.0",
     "motion": "^12.0.0-alpha.2",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
+    "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
@@ -43,6 +45,7 @@
     "react-intersection-observer": "^9.15.1",
     "react-slick": "^0.30.3",
     "sonner": "^1.7.4",
+    "swiper": "^11.2.5",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "tsparticles": "^3.8.1",
@@ -52,6 +55,7 @@
     "@eslint/eslintrc": "^3.2.0",
     "@iconify/react": "^5.2.0",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-fontawesome": "^1.6.8",
