--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-checkbox": "^1.1.4",
@@ -31,7 +32,7 @@
     "embla-carousel-react": "^8.5.2",
     "font-awesome": "^4.7.0",
     "form-data": "^4.0.2",
-    "framer-motion": "^12.4.7",
+    "framer-motion": "^12.5.0",
     "howler": "^2.2.4",
     "lucide-react": "^0.474.0",
     "motion": "^12.0.0-alpha.2",
