--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "@radix-ui/react-navigation-menu": "^1.2.4",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slider": "^1.3.2",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
+    "@supabase/supabase-js": "^2.49.4",
     "@tabler/icons-react": "^3.31.0",
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
@@ -42,15 +45,17 @@
     "howler": "^2.2.4",
     "lucide-react": "^0.474.0",
     "motion": "^12.0.0-alpha.2",
-    "next": "15.1.6",
+    "next": "^15.3.1",
     "next-themes": "^0.4.4",
     "nodemailer": "^6.10.0",
+    "punycode.js": "^2.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.15.1",
+    "react-router-dom": "^7.5.1",
     "react-slick": "^0.30.3",
     "sonner": "^1.7.4",
     "swiper": "^11.2.5",
