--- a/package.json
+++ b/package.json
@@ -67,9 +67,9 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@iconify/react": "^5.2.0",
-    "@types/node": "^20",
+    "@types/node": "20.17.32",
     "@types/nodemailer": "^6.4.17",
-    "@types/react": "^19",
+    "@types/react": "19.1.2",
     "@types/react-dom": "^19",
     "@types/react-fontawesome": "^1.6.8",
     "@types/react-slick": "^0.23.13",
@@ -78,6 +78,6 @@
     "eslint-config-next": "15.1.6",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "typescript": "5.8.3"
   }
 }
